<resources>
    <string name="app_name">Project 3 Mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">prompt_email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="prompt_re_enter">Re-Enter Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="prompt_username">Enter Username</string>
    <string name="create_account">create_account</string>
    <string name="register">register</string>
    <string name="enterFirstName">Enter First Name</string>
    <string name="enterLastName">Enter Last Name</string>
    <string name="checkbox_text"> Are you a Professor?</string>
</resources>